테스트 시 h2 in-memory db 사용할 수 있도록 설정

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
     /* Database */
-    // runtimeOnly 'com.h2database:h2'
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.199'
     runtimeOnly'mysql:mysql-connector-java'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // After configuring DB connection
 
