api 제작 - 주문 조회 (worst case 2 - 엔티티 전달)

--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     /* JWT */
     // implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+    /* JSON */
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate5'
+
     /* GSON */
     // implementation 'com.google.code.gson:gson'
 
